# Interkoneksi_Sistem_Instrumentasi

./: .gitignore  README.md  tutorial
backend/isi/sensor/: Cargo.toml
backend/isi/sensor/src/: main.rs
backend/isi/server/: .env  Cargo.toml
backend/isi/server/src/: main.rs
blockchain/: package-lock.json  package.json
blockchain/contracts/: DataMarketplace.sol
blockchain/scripts/: deploy.js
desktop_dashboard/: dashboard.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/public/: deployedAddress.json
frontend/src/: App.css  App.js
ppt/: PPT ISI_KELOMPOK 9.pptx
tutorial/: tutorial menjalankan.md
