[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.10.0", features = ["rtu"]}
tokio-serial = "5.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
