[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
axum = { version = "0.7", features = ["ws"]}
ethers = { version = "2.0.14", features = ["default"] }
influxdb2 = "0.3.0"
futures = "0.3"
uuid = { version = "1.8.0", features = ["v4", "serde"]}
tower-http = { version = "0.5", features = ["cors"]}
